// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upgradeMusicIndex v1 → current upgrades a v1 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "albumArtist": null,
      "artist": "Test Artist",
      "composer": null,
      "coverArt": null,
      "duration": 180.5,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "preferComposerGrouping": null,
      "size": 3145728,
      "title": "Test Track",
      "track": null,
    },
    {
      "album": null,
      "albumArtist": null,
      "artist": null,
      "composer": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "preferComposerGrouping": null,
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 7,
}
`;

exports[`upgradeMusicIndex v2 → current upgrades a v2 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "albumArtist": null,
      "artist": "Test Artist",
      "composer": null,
      "coverArt": null,
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "preferComposerGrouping": null,
      "size": 3145728,
      "title": "Test Track",
      "track": null,
    },
    {
      "album": null,
      "albumArtist": null,
      "artist": null,
      "composer": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "preferComposerGrouping": null,
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 7,
}
`;

exports[`upgradeMusicIndex v3 → current upgrades a v3 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "albumArtist": null,
      "artist": "Test Artist",
      "composer": null,
      "coverArt": null,
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "preferComposerGrouping": null,
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "albumArtist": null,
      "artist": null,
      "composer": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "preferComposerGrouping": null,
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 7,
}
`;

exports[`upgradeMusicIndex v4 → current upgrades a v4 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "albumArtist": null,
      "artist": "Test Artist",
      "composer": null,
      "coverArt": "/Artist/Album/Folder.jpg",
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "preferComposerGrouping": null,
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "albumArtist": null,
      "artist": null,
      "composer": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "preferComposerGrouping": null,
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 7,
}
`;

exports[`upgradeMusicIndex v5 → current upgrades a v5 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "albumArtist": null,
      "artist": "Test Artist",
      "composer": null,
      "coverArt": "/Artist/Album/Folder.jpg",
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "preferComposerGrouping": null,
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "albumArtist": null,
      "artist": null,
      "composer": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "preferComposerGrouping": null,
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 7,
}
`;

exports[`upgradeMusicIndex v6 → current upgrades a v6 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "albumArtist": "Test Album Artist",
      "artist": "Test Artist",
      "composer": null,
      "coverArt": "/Artist/Album/Folder.jpg",
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "preferComposerGrouping": null,
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "albumArtist": null,
      "artist": null,
      "composer": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "preferComposerGrouping": null,
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 7,
}
`;
